get main program for testing